<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">SAHA</string>
    <string name="title_activity_face_detection">FaceDetectionActivity</string>
    <string name="choose_account">Choose account</string>
    <string name="anonymous">Anonymous</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="users">users</string>

    <!-- Actionbar FIXME: Needs cleanup -->
    <string name="action_add_user">Add user</string>
    <string name="action_edit_user">Edit user</string>
    <string name="action_recognize">Recognize</string>
    <string name="recognize">Recognize</string>
    <string name="list_users">List users</string>
    <string name="delete_users">Delete users</string>
    <string name="train">Train</string>
    <string name="action_train">Train</string>
    <string name="action_list_users">List users</string>
    <string name="action_delete_users">Delete users</string>
    <string name="home_screen_title_email_address">Address</string>
    <string name="email_unread">Unread emails</string>

    <!-- Admin -->
    <string name="delete_users_title">Delete users</string>
    <string name="delete_users_message">This will delete all users including their face images. Sure?</string>

    <!-- Face detection / recognition -->
    <string name="face_reg_message">The application will now start the camera and take a series of pictures.</string>
    <string name="user_recognized_speech">Hello %1$s</string>

    <!-- User registration -->
    <string name="register">Register</string>
    <string name="reg_enter_first_name">Please enter your first name</string>
    <string name="first_name">First name</string>
    <string name="reg_enter_surname">Please enter your surname</string>
    <string name="surname">Surname</string>
    <string name="attach_google_account">Attach Google Account</string>
    <string name="attached_google_account">Attached Google Account: %1$s</string>

    <!-- User edit -->
    <string name="user_add_photos">Add face photos</string>
    <string name="user_delete">Delete user</string>
    <string name="delete_user_title">Delete user</string>
    <string name="delete_user_message">This will delete the user and all their face images. Sure?</string>
    <string name="user_name">Name: %1$s</string>
    <string name="user_num_photos">Num photos: %1$d</string>

</resources>