<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add_user"
        android:icon="@drawable/ic_action_add_user"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_add_user"/>
    <item
        android:id="@+id/action_train"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_train"/>
    <item
        android:id="@+id/action_recognize"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_recognize"/>
    <item
        android:id="@+id/action_list_users"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_list_users"/>
    <item
        android:id="@+id/action_delete_users"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_delete_users"/>
    <item
        android:id="@+id/action_animate_home_in"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_animate_home_in"/>
    <item
        android:id="@+id/action_animate_home_out"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/action_animate_home_out"/>

</menu>